2003-05-02  Stuart Brorson <SDB@cloud9.net>
 	*  Major changes in subckt.c to handle POLY attributes in
 	dependent sources.  Added new case to switch in "translate" to
 	handle E, F, G, H sources.  Many other fixes.
 	
 	*  Moved location of call to ENHtranslate_poly in inp.c.  This was
 	necessary to correctly process POLY attributes and the associated
 	netlists and voltage sources.
 
2003-04-10  Stuart Brorson <sdb@cloud9.net>
	* modified inp_readall (inpcom.c) to ignore blank 
	  lines terminated by \r\n *and * \n.  This fixes problems
	  associated with importing files from Windozeland.
	* Added explanatory comments to many modules.
	
2001-11-25  Emmanuel Rouat  <emmanuel.rouat@wanadoo.fr>

	* circuits.h: transfered definition of sstructire 'circ' to ftedefs.h

2001-02-07  Paolo Nenzi <p.nenzi@ieee.org>

	* outitf.c: From a message Alan sento to the mailing list:
	---------- Forwarded message ----------
	Date: Tue, 6 Feb 2001 11:11:56 -0000 
	From: "Gillespie, Alan" <Alan.Gillespie@analog.com>
	Reply-To: ng-spice-devel@ieee.ing.uniroma1.it
	To: "Ng-Spice-Devel (E-mail)" <ng-spice-devel@ieee.ing.uniroma1.it>
	Subject: [ng-spice-devel] Reference variable update in interactive mode


	I've tweaked outitf.c so that the reference variable value
	is updated to the screen in interactive mode. I forgot to
	save the old version first, though, so I couldn't do a diff,
	so I'm just attaching the whole new outitf.c file. Also, I've
	updated the documentation as follows :-



	Modifications to "outitf.c"
	---------------------------

	A number of modifications have been applied to outitf.c in 
	order to achieve the following "improvements" :-

	    1) Spice3, by default, saved all node voltages, including 
	       nodes internal to the devices. These extra nodes add 
	       dramatically to the amount of data saved, but don't add 
	       significantly to the useful information about the circuit. 
	       So, instead of saving these nodes, a "hack" has been 